@@ -1,3 +1,3 @@
 This file can be used to document future development
 
- * document the Sconstruct file of the OpenAlea.OALab package 
+ * document the Sconstruct file of the OpenAlea.VPLab package 
