@@ -1,11 +1,11 @@
 .. Do not edit this file. Edit user/overview.txt, user/index user/autosum 
 .. You may add as many files as you want in ./user.
 
-.. _oalab:
+.. _vplab:
 
-.. module:: oalab
+.. module:: vplab
 
-OpenAlea OALab documentation
+OpenAlea VPLab documentation
 #########################################################################
 
 Module description
@@ -32,13 +32,13 @@ Documentation
     User Guide<user/index.rst>   
     Reference Guide<user/autosum.rst>
 
-- A `PDF <../latex/oalab.pdf>`_ version of |oalab| documentation is 
+- A `PDF <../latex/vplab.pdf>`_ version of |vplab| documentation is 
   available.
 
 .. seealso::
 
    More documentation can be found on the
-   `openalea <http://openalea.gforge.inria.fr/dokuwiki/doku.php?id=packages:openalea:oalab:oalab>`__ wiki.
+   `openalea <http://openalea.gforge.inria.fr/dokuwiki/doku.php?id=packages:openalea:vplab:vplab>`__ wiki.
 
 Authors
 =======
@@ -53,9 +53,9 @@ ChangeLog
 License
 =======
 
-|oalab| is released under a Cecill-C License.
+|vplab| is released under a Cecill-C License.
 
 .. note:: `Cecill-C <http://www.cecill.info/licences/Licence_CeCILL-C_V1-en.html>`_ 
     license is a LGPL compatible license.
 
-.. |oalab| replace:: OpenAlea.OALab
+.. |vplab| replace:: OpenAlea.VPLab
