@@ -1,6 +1,6 @@
-.. _oalab_user:
+.. _vplab_user:
 
-OpenAlea.OALab User Guide
+OpenAlea.VPLab User Guide
 #######################################
 
 :Version: |version|
@@ -8,13 +8,13 @@ OpenAlea.OALab User Guide
 :Date: |today|
 
 This manual details functions, modules, and objects included in 
-OpenAlea.OALab, describing what they are and what they do. For a complete 
-reference guide, see :ref:`oalab_reference`.
+OpenAlea.VPLab, describing what they are and what they do. For a complete 
+reference guide, see :ref:`vplab_reference`.
 
 .. warning::
 
    This "User Guide" is still very much in progress. 
-   Many aspects of OpenAlea.OALab are not covered.
+   Many aspects of OpenAlea.VPLab are not covered.
 
    More documentation can be found on the
    `openalea <http://openalea.gforge.inria.fr>`__ wiki.
