@@ -1,1 +1,1 @@
-Open Alea Laboratory (OpenAlea.OALab) provides a graphical user interface wich combine LPy, Visualea and others...
+Open Alea Laboratory (OpenAlea.VPLab) provides a graphical user interface wich combine LPy, Visualea and others...
