@@ -3,12 +3,12 @@
 version = 0.0.1
 release = 
 project = openalea
-name = OpenAlea.OALab
+name = OpenAlea.VPLab
 namespace = openalea
-pkg_name = openalea.oalab
-package = OALab
-description= OALab package for OpenAlea.
-long_description= The OpenAlea.OALab package is a GUI for OpenAlea wich permit to use Visualea and LPy and others in the same application.
+pkg_name = openalea.vplab
+package = VPLab
+description= VPLab package for OpenAlea.
+long_description= The OpenAlea.VPLab package is a GUI for OpenAlea wich permit to use Visualea and LPy and others in the same application.
 authors= OpenAlea consortium
 authors_email = christophe pradal at cirad fr, julien coste at inria fr
 url = http://openalea.gforge.inria.fr
