@@ -13,19 +13,19 @@ all_files  = 1
 [nosetests]
 where=test
 #with_coverage=
-#cover_package=openalea.oalab
+#cover_package=openalea.vplab
 #cover_erase=
 verbosity=2
 
 [pylint]
-pylint_packages=src/oalab
+pylint_packages=src/vplab
 
 [egg_upload]
-package = OpenAlea.oalab
+package = OpenAlea.vplab
 
 
 [upload_sphinx]
-package = oalab
+package = vplab
 project = openalea
 
 
