@@ -1,1 +1,2 @@
 * 13/12/12 Creation of OALab
+* 05/04/14 Rename OALab into VPLab
